--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "module-alias": "^2.2.2",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.4.4",
+    "ts-node-dev": "^1.1.8"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only --clear -r dotenv/config --inspect=0.0.0.0:9229 src/main"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gandalf06/back-end-cdb.git"
   },
-  "author": "Darlan Oliveira",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/gandalf06/back-end-cdb/issues"
   },
-  "homepage": "https://github.com/gandalf06/back-end-cdb#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "module-alias": "^2.2.2"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/module-alias": "^2.0.1",
-    "dotenv": "^10.0.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
-  }
+  "homepage": "https://github.com/gandalf06/back-end-cdb#readme"
 }
