--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "express": "^4.17.1",
     "module-alias": "^2.2.2",
     "rimraf": "^3.0.2",
-    "typescript": "^4.4.4",
-    "ts-node-dev": "^1.1.8"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {},
   "scripts": {
