--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "back-end-cdb",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main/index.js",
   "directories": {
     "test": "test"
   },
@@ -14,9 +14,13 @@
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^27.3.1",
+    "supertest": "^6.1.6"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/main/index.js",
+    "test": "jest --colors --noStackTrace --passWithNoTests --runInBand"
   },
   "repository": {
     "type": "git",
