--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "module-alias": "^2.2.2",
-    "rimraf": "^3.0.2",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4"
+    "fast-glob": "^3.2.7",
+    "module-alias": "^2.2.2"
   },
   "devDependencies": {
     "jest": "^27.3.1",
