--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "dependencies": {
+    "bignumber.js": "^9.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fast-glob": "^3.2.7",
