--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
   },
   "dependencies": {
     "bignumber.js": "^9.0.1",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "fast-glob": "^3.2.7",
-    "module-alias": "^2.2.2"
+    "fast-glob": "^3.2.7"
   },
   "devDependencies": {
     "jest": "^27.3.1",
